# rpg-roleplay-platform

./: .gitignore  ARCH_107_DUAL_TIMELINE_DESIGN.md  AUDIT_CHECKLIST.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.legacy.md  README.md  README.zh-CN.md  VERSION
rpg/: .env.example  BACKEND_API_CONTRACT.md  CLAUDE_CODE_AUDIT_REPORT.md  CLAUDE_CODE_HANDOFF.md  README.md  SECURITY_AUDIT.md  acceptance_verifier.py  anchor_seed_agent.py  app.py  chapter_fact_indexer.py  chapter_splitter.py  character_card_generator.py  chat_pipeline.py  chat_tool_router.py  command_agent.py  command_dispatcher.py  command_tools.py  command_tools_anchors.py  command_tools_creative.py  command_tools_misc.py  command_tools_phase.py  command_tools_queries.py  command_tools_register.py  command_tools_rules.py  command_tools_saves.py  command_tools_ui_action.py  command_tools_worldbook.py  console_assistant.py  context_agent.py  context_engine.py  crypto_utils.py  demo.py  extractor.py  game_policy.py  gm.py  mcp_broker.py  model_aliases.py  model_probe.py  model_registry.py  phase_digest_agent.py  (+22 more)
rpg/agents/: _harness.py  acceptance_verifier.py  anchor_seed_agent.py  black_swan_agent.py  command_agent.py  context_agent.py  extractor.py  gm.py  phase_digest_agent.py  provider_errors.py  recorder.py  timeline_narrative_guard.py  world_heartbeat.py  worldbook_agent.py
rpg/bench/: calibrate.py  judge.py  judge_cases.py  judge_report.py  run_judge.py
rpg/chat_pipeline/: __init__.py  _common.py  _input_signals.py  context.py  directives.py  gm.py  persist.py  postproc.py  rules.py
rpg/config/: glossary.py  model_catalog.json
rpg/console_assistant/: __init__.py  _state.py  confirmation.py  conversations.py  editor_context.py  llm_loop.py  prompts.py  streaming.py  tools.py
rpg/context_engine/: __init__.py  _constants.py  _utils.py  core.py  formatters.py  helpers.py  layers.py  loaders.py
rpg/context_providers/: __init__.py  base.py  memory.py  module.py  novel.py  npc_agenda.py  recent_chat.py  registry.py  rules.py  runtime_phase_digests.py  script_phase_anticipation.py  tavern.py  worldline.py
rpg/core/: config.py  feature_flags.py  llm_backend.py  logging.py  outbound.py  request_cache.py  security.py  startup.py  vertex_sa.py
rpg/cron/: policy_notice.py
rpg/docs/: README.md  openapi.json
rpg/extract/: arc_pipeline.py  budget.py  embed.py  facts_refine.py  incremental.py  job_runner.py  llm.py  per_chapter.py  pipeline.py  rebuild.py  resolve.py  seed.py
rpg/gm_serving/: anchor_reconcile.py  context_inject.py  recorder_bridge.py  serve.py  settings.py  steering.py
rpg/ingest/: adaptive_split.py  filters.py  sanitize.py
rpg/kb/: alias.py  canon_repo.py  episodic.py  recall.py  reveal.py  save_kb.py  t0_seed.py
rpg/modules/: __init__.py
rpg/platform_app/: __init__.py  account_io.py  api.py  auth.py  branches.py  cluster.py  db.py  dmca.py  email.py  federation.py  frontend_routes.py  import_pipeline.py  knowledge.py  library.py  migrate.py  moderation.py  pages.py  policy_notice.py  privacy.py  runtime.py  save_io.py  script_import.py  security.py  settings.py  tavern_cards.py  tavern_chats.py  turnstile.py  usage.py  user_cards.py  user_credentials.py  user_models.py  workspace.py
rpg/rath/: briefing.py  engine.py  npc_scene.py  sim.py
rpg/routes/: console_assistant.py  core.py  game.py  mcp.py  memory.py  models.py  permissions.py  rath.py  regex_scripts.py  rules.py  sidebar.py  skills.py  tavern.py  timeline.py  worldbook_overlay.py  worldline.py
rpg/rules/: __init__.py  base.py  dice.py  engine.py
rpg/rules_bridge/: __init__.py  checks.py  combat.py  consume.py  intent.py  inventory.py  module_ops.py  suggest.py
rpg/schemas/: _common.py  console_assistant.py  game.py  mcp.py  memory.py  models.py  permissions.py  rules.py  sidebar.py  skills.py  worldline.py
rpg/scripts/: aggregate_phase_digests.py  backfill_token_usage_scenario.py  bulk_backfill_phase_digests.py  e2e_long_game_test.py  gen_openapi.py  ingest_novel_facts_chunks.py  ingest_novel_to_script.py  kb_history_compaction.py  llm_e2e_test.py  phase_digest_worker.py  run_cron.py  run_postproc_worker.py
rpg/state/: __init__.py  core.py  extractors.py  json_ops.py  labels.py  npc_agenda.py  parsers.py  path_ops.py  regex_scripts.py  time_ops.py  utils.py
rpg/tests/: helpers.py  test_ability_autoarchive.py  test_acceptance_ab.py  test_acceptance_verifier.py  test_account_lifecycle.py  test_active_entities_three_tier.py  test_anon_platform_gate.py  test_api_models_envelope.py  test_ash_mine_module.py  test_baseline.py  test_bench_judge.py  test_branch_and_set.py  test_branch_graph_head_only_filter.py  test_branch_graph_vscode_style.py  test_branch_runtime_switch.py  test_branch_seed_isolation.py  test_branches_continue_contract.py  test_cards_menu_fix.py  test_character_card_generator.py  test_chat_field_contract.py  test_clarify_threshold.py  test_click_retest_existing_card.py  test_combat_no_gm_hallucination.py  test_command_dispatcher.py  test_command_tools.py  test_command_tools_extended.py  test_command_tools_misc.py  test_composer_live_data.py  test_console_assistant.py  test_context_db.py  test_context_providers.py  test_continue_picker_uses_commit_activate.py  test_credentials_api.py  test_cross_save_isolation.py  test_deterministic_rules_routing.py  test_durable_sync.py  test_e2e_memory_invariant.py  test_e2e_narrative_guard_chat_flow.py  test_editor_agent_fixes.py  test_embed_recall_consistency.py  (+65 more)
rpg/tools/: contract_check.py
rpg/tools_dsl/: chat_tool_router.py  command_dispatcher.py  command_tools.py  command_tools_anchors.py  command_tools_creative.py  command_tools_kb.py  command_tools_misc.py  command_tools_persona.py  command_tools_phase.py  command_tools_queries.py  command_tools_register.py  command_tools_rules.py  command_tools_saves.py  command_tools_script_write.py  command_tools_tavern.py  command_tools_ui_action.py  command_tools_worldbook.py  set_parser.py  tool_registry.py  ui_dispatch_helper.py
rust/: .gitignore  Cargo.toml  README.md  docker-compose.e2e.yml
(+2073 files in other folders)
