[workspace]
resolver = "2"
members = [
    "crates/rpg-core",
    "crates/rpg-schemas",
    "crates/rpg-db",
    "crates/rpg-rules",
    "crates/rpg-rules-bridge",
    "crates/rpg-retrieval",
    "crates/rpg-llm",
    "crates/rpg-state",
    "crates/rpg-context",
    "crates/rpg-agents",
    "crates/rpg-platform",
    "crates/rpg-routes",
    "crates/rpg-tools-dsl",
    "crates/rpg-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
license = "MIT"
repository = "https://github.com/local/rpg-rust"

[workspace.dependencies]
# core async
tokio = { version = "1.43", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"

# serde / json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# web
axum = { version = "0.7", features = ["macros", "json", "multipart", "ws"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip", "compression-br", "timeout"] }
tower_governor = { version = "0.4", features = ["axum"] }
axum-prometheus = "0.10"
hyper = "1"
http = "1"

# http client / sse
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
eventsource-stream = "0.2"

# db
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "uuid", "json", "chrono", "macros"] }
pgvector = { version = "0.4", features = ["sqlx"] }

# metrics
metrics = "0.24"

# util
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dotenvy = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
once_cell = "1"
parking_lot = "0.12"
dashmap = "6"
bytes = "1"
base64 = "0.22"
rand = "0.8"
url = "2"
smallvec = { version = "1", features = ["union"] }
phf = { version = "0.11", features = ["macros"] }
ahash = "0.8"

# google auth
yup-oauth2 = "12"

# 内部 crate
rpg-core = { path = "crates/rpg-core" }
rpg-schemas = { path = "crates/rpg-schemas" }
rpg-db = { path = "crates/rpg-db" }
rpg-rules = { path = "crates/rpg-rules" }
rpg-rules-bridge = { path = "crates/rpg-rules-bridge" }
rpg-retrieval = { path = "crates/rpg-retrieval" }
rpg-llm = { path = "crates/rpg-llm" }
rpg-state = { path = "crates/rpg-state" }
rpg-context = { path = "crates/rpg-context" }
rpg-agents = { path = "crates/rpg-agents" }
rpg-platform = { path = "crates/rpg-platform" }
rpg-routes = { path = "crates/rpg-routes" }
rpg-tools-dsl = { path = "crates/rpg-tools-dsl" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = 1
