[package]
name = "rpg-agents"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rpg-core.workspace = true
rpg-schemas.workspace = true
rpg-state.workspace = true
rpg-llm.workspace = true
rpg-context.workspace = true
rpg-db.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
tokio.workspace = true
futures.workspace = true
futures-util.workspace = true
regex.workspace = true
chrono.workspace = true
once_cell.workspace = true
sqlx.workspace = true
rand.workspace = true
