[package]
name = "rpg-context"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rpg-core.workspace = true
rpg-schemas.workspace = true
rpg-state.workspace = true
rpg-retrieval.workspace = true
rpg-db.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
tokio.workspace = true
futures.workspace = true
regex.workspace = true
once_cell.workspace = true
