[package]
name = "rpg-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
chrono.workspace = true
regex.workspace = true
