[package]
name = "rpg-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
chrono.workspace = true
regex.workspace = true
# 仅为 newtype id(UserId/SaveId/RunId)提供 sqlx Type/Encode/Decode(Postgres i8)。
# 不引入 runtime / macros / query!,保持 rpg-core 无 DB 运行时依赖。
sqlx.workspace = true
