[package]
name = "rpg-db"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rpg-core.workspace = true
rpg-schemas.workspace = true
sqlx.workspace = true
pgvector.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
async-trait.workspace = true
metrics.workspace = true
