[package]
name = "rpg-llm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rpg-core.workspace = true
rpg-schemas.workspace = true
reqwest.workspace = true
eventsource-stream.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true
futures-util.workspace = true
bytes.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
url.workspace = true
yup-oauth2.workspace = true
hyper-util = { version = "0.1", features = ["client-legacy"] }
base64.workspace = true
once_cell.workspace = true
sqlx = { workspace = true, optional = true }

[features]
db = ["sqlx"]
