[package]
name = "rpg-llm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rpg-core.workspace = true
rpg-schemas.workspace = true
reqwest.workspace = true
eventsource-stream.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true
futures-util.workspace = true
bytes.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
url.workspace = true
yup-oauth2.workspace = true
hyper-util = { version = "0.1", features = ["client-legacy"] }
base64.workspace = true
once_cell.workspace = true
smallvec.workspace = true
metrics.workspace = true
sqlx = { workspace = true, optional = true }

[features]
db = ["sqlx"]
# 触发 SSE 流式 chunk 类型 ts 导出 — cargo test -p rpg-llm --features ts-rs。
ts-rs = ["dep:ts-rs"]

[dependencies.ts-rs]
version = "12"
features = ["serde-compat", "serde-json-impl", "chrono"]
optional = true
