[package]
name = "rpg-platform"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rpg-core.workspace = true
rpg-schemas.workspace = true
rpg-db.workspace = true
rpg-llm.workspace = true
rpg-state.workspace = true
rpg-retrieval.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
pgvector.workspace = true
chrono.workspace = true
uuid.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true
regex.workspace = true
base64.workspace = true
bytes.workspace = true
rand.workspace = true
parking_lot.workspace = true
once_cell.workspace = true
sha2 = "0.10"
url.workspace = true
aes-gcm = "0.10"
argon2 = "0.5"
hkdf = "0.12"
hex = "0.4"
flate2 = "1"
crc32fast = "1"
byteorder = "1"
