[package]
name = "rpg-platform"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rpg-core.workspace = true
rpg-schemas.workspace = true
rpg-db.workspace = true
rpg-llm.workspace = true
rpg-state.workspace = true
rpg-retrieval.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
pgvector.workspace = true
chrono.workspace = true
uuid.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true
regex.workspace = true
encoding_rs = "0.8"
base64.workspace = true
bytes.workspace = true
rand.workspace = true
parking_lot.workspace = true
once_cell.workspace = true
sha2 = "0.10"
url.workspace = true
aes-gcm = "0.10"
argon2 = "0.5"
hkdf = "0.12"
hex = "0.4"
flate2 = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
crc32fast = "1"
byteorder = "1"
zeroize = "1"
dirs = "6"
# 待办A:限流可选下沉到 Redis(多副本共享速率/并发计数)。未设 RPG_REDIS_URL 时不连接,
# 仅作为依赖编译进来 —— 工厂在运行期决定走 Memory 还是 Redis 后端(优雅降级)。
redis = { version = "0.27", features = ["tokio-comp", "connection-manager", "script"] }
# Wave 8-A: GcpKmsProvider / VaultProvider 用 reqwest 调 KMS REST endpoint。
# 复用 workspace reqwest(rustls-tls,与 rpg-llm 一致),不引入新 dep。
reqwest.workspace = true
