[package]
name = "rpg-retrieval"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rpg-db.workspace = true
sqlx.workspace = true
pgvector.workspace = true
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
