[package]
name = "rpg-routes"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rpg-core.workspace = true
rpg-schemas.workspace = true
rpg-state.workspace = true
rpg-llm.workspace = true
rpg-context.workspace = true
rpg-agents.workspace = true
rpg-platform.workspace = true
rpg-db.workspace = true
rpg-rules.workspace = true
rpg-rules-bridge.workspace = true
rpg-tools-dsl.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true
http.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
tokio-util = { version = "0.7", features = ["rt"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures.workspace = true
futures-util.workspace = true
async-trait.workspace = true
bytes.workspace = true
sqlx.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
chrono.workspace = true
uuid.workspace = true
base64.workspace = true
metrics.workspace = true

[features]
# 触发 SSE event 类型 ts 导出 — cargo test -p rpg-routes --features ts-rs。
ts-rs = ["dep:ts-rs", "rpg-llm/ts-rs", "rpg-state/ts-rs", "rpg-schemas/ts-rs"]

[dependencies.ts-rs]
version = "12"
features = ["serde-compat", "serde-json-impl", "chrono"]
optional = true
