[package]
name = "rpg-rules-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rpg-rules.workspace = true
rpg-schemas.workspace = true
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
thiserror.workspace = true
tracing.workspace = true
once_cell.workspace = true
