[package]
name = "rpg-rules-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rpg-rules.workspace = true
rpg-schemas.workspace = true
# Wave 5-B / P1-5: dispatcher 把 RulesEngine 非 _combatant.* 的 state_ops
# 通过 rpg-state::apply_rules_outcome_data 写回 GameStateData。
rpg-state.workspace = true
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
thiserror.workspace = true
tracing.workspace = true
once_cell.workspace = true
