[package]
name = "rpg-rules"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
rand.workspace = true
thiserror.workspace = true
once_cell.workspace = true

[dev-dependencies]
tempfile = "3"
