[package]
name = "rpg-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "rpg-server"
path = "src/main.rs"

[dependencies]
rpg-core.workspace = true
rpg-schemas.workspace = true
rpg-db.workspace = true
rpg-llm.workspace = true
rpg-state.workspace = true
rpg-context.workspace = true
rpg-agents.workspace = true
rpg-platform.workspace = true
rpg-routes.workspace = true
rpg-retrieval.workspace = true
rpg-rules.workspace = true
rpg-rules-bridge.workspace = true
rpg-tools-dsl.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
serde.workspace = true
serde_json.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
http = { workspace = true }
futures-util.workspace = true
uuid.workspace = true
thiserror.workspace = true
sqlx.workspace = true
