[package]
name = "rpg-state"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rpg-core.workspace = true
rpg-schemas.workspace = true
rpg-db.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
once_cell.workspace = true
regex.workspace = true
rand.workspace = true
phf.workspace = true
ahash.workspace = true
# task: script_overrides 走 rpg-db::repos::script_overrides;saves 表 join 走 sqlx raw SQL 兜底。
sqlx.workspace = true

[features]
# 触发 SSE/state event 类型 ts 导出 — 通过 cargo test -p rpg-state --features ts-rs 运行。
ts-rs = ["dep:ts-rs", "rpg-schemas/ts-rs"]

[dependencies.ts-rs]
version = "12"
features = ["serde-compat", "serde-json-impl", "chrono"]
optional = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "typed_path"
harness = false
