[package]
name = "rpg-tools-dsl"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rpg-core.workspace = true
rpg-schemas.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
tokio.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
rlimit = "0.10"
tempfile = "3"
zip = { version = "2", default-features = false, features = ["deflate"] }
sqlx.workspace = true
libc = "0.2"
which = "6"
